# Agentic-Clinical-Coding-CDI-Assistant

./: .gitignore  CLAUDE.md  CLINIQ_SPEC.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.streamlit/: config.toml
cliniq/: __init__.py  config.py  model_manager.py  pipeline.py
cliniq/data/: kg_rules.json
cliniq/evaluation/: __init__.py  llm_judge.py
cliniq/knowledge_graph/: __init__.py  builder.py  querier.py  schema.py
cliniq/models/: __init__.py  ambient.py  audit.py  cdi.py  coding.py  document.py  entities.py  evaluation.py
cliniq/modules/: __init__.py  m1_ingest.py  m2_nlu.py  m3_rag_coding.py  m4_cdi.py  m5_explainability.py  m6_ambient.py
cliniq/rag/: __init__.py  build_index.py  icd10_loader.py  reranker.py  retriever.py
cliniq/tests/: __init__.py  test_knowledge_graph.py  test_llm_judge.py  test_m1_ingest.py  test_m2_nlu.py  test_m3_coding.py  test_m4_cdi.py  test_m5_explainability.py  test_models.py  test_pipeline.py  (+1 more)
cliniq_v2/: __init__.py  api_client.py  config.py  pinecone_client.py  pipeline.py
docs/: demo_output.txt
experimentations/: ClinIQ_Notebook_Requirements.docx  NB01_architectures.ipynb  NB01_executed.ipynb  NB02_executed.ipynb  NB02_pipeline.ipynb  NB03_domain_models.ipynb  NB03_executed.ipynb  NB04_evaluation.ipynb  NB04_executed.ipynb  NB05_executed.ipynb  NB05_langchain_agent.ipynb  NB06_executed.ipynb  NB06_multimodal.ipynb
scripts/: build_v2_index.py  demo.py  generate_test_data.py  generate_test_images.py  populate_pinecone_index.py  populate_pinecone_index_v2.py  precompute_ambient.py  precompute_demo.py
ui/: app.py
(+122 files in other folders)
